@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - when setting up prompting in Makefile.PL for multiple optional
+            features, control all prompts from one master plugin to ensure the
+            prompt order remains as desired
 
 0.019     2014-11-22 07:35:51Z
           - make the -description option mandatory, for more readable prompt
